--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,43 @@
+2017-01-03  Martin Sebor  <msebor@redhat.com>
+
+	PR tree-optimization/78696
+	* gcc.dg/tree-ssa/builtin-sprintf-5.c: Remove incorrect test cases.
+	* gcc.dg/tree-ssa/builtin-sprintf-warn-7.c: Correct off-by-1 errors.
+	* gcc.dg/tree-ssa/builtin-sprintf-warn-9.c: New test.
+	* gcc.dg/tree-ssa/builtin-sprintf.c: Add test cases.
+
+2017-01-03  David Malcolm  <dmalcolm@redhat.com>
+
+	* gcc.dg/dg-test-1.c: Add tests of relative line specifications
+	with more than one digit.
+	* lib/gcc-dg.exp (process-message): Support more than one digit
+	in relative line specifications.
+
+2017-01-03  Jakub Jelinek  <jakub@redhat.com>
+
+	PR tree-optimization/78965
+	* gcc.dg/pr78965.c: New test.
+
+	PR middle-end/78901
+	* g++.dg/opt/pr78901.C: New test.
+
+2017-01-03  Janne Blomqvist  <jb@gcc.gnu.org>
+
+	PR fortran/78534
+	PR fortran/66310
+	* gfortran.dg/dependency_49.f90: Change scan-tree-dump-times
+	due to gfc_trans_string_copy change to avoid -Wstringop-overflow.
+	* gfortran.dg/repeat_4.f90: Use integers of kind C_SIZE_T.
+	* gfortran.dg/repeat_7.f90: New test for PR 66310.
+	* gfortran.dg/scan_2.f90: Handle potential cast in assignment.
+	* gfortran.dg/string_1.f90: Limit to ilp32 targets.
+	* gfortran.dg/string_1_lp64.f90: New test.
+	* gfortran.dg/string_3.f90: Limit to ilp32 targets.
+	* gfortran.dg/string_3_lp64.f90: New test.
+	* gfortran.dg/transfer_intrinsic_1.f90: Change
+	scan-tree-dump-times due to gfc_trans_string_copy change to
+	avoid -Wstringop-overflow.
+
 2017-01-02  Uros Bizjak  <ubizjak@gmail.com>
 
 	PR target/78967
