--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-03  Michael Meissner  <meissner@linux.vnet.ibm.com>
+
+	PR target/78953
+	* gcc.target/powerpc/pr78953.c: New test.
+
 2017-01-03  Ian Lance Taylor  <iant@google.com>
 
 	* gcc.misc-tests/godump-1.c: Update for accurate representation of
