--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2017-01-04  Alan Modra  <amodra@gmail.com>
+
+	* Makefile.in (aclocal_deps): Update and order as per aclocal.m4.
+	* configure: Regenerate.
+	* config.in: Regenerate.
+
 2017-01-04  Jakub Jelinek  <jakub@redhat.com>
 
 	PR bootstrap/77569
