--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-04  Jakub Jelinek  <jakub@redhat.com>
+
+	PR tree-optimization/71563
+	* gcc.dg/tree-ssa/pr71563.c: New test.
+
 2017-01-04  Janne Blomqvist  <jb@gcc.gnu.org>
 
 	PR fortran/78534
