--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,9 @@
+2017-01-04  Richard Earnshaw  <rearnsha@arm.com>
+	    Jiong Wang  <jiong.wang@arm.com>
+
+	* dwarf2.def (DW_OP_AARCH64_operation): Reserve the number 0xea.
+	(DW_CFA_GNU_window_save): Comments the multiplexing on AArch64.
+
 2017-01-04  Jakub Jelinek  <jakub@redhat.com>
 
 	Update copyright years.
