--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -8092,7 +8092,7 @@
 			 (const_int 0)]))]
 {
   operands[2] = gen_lowpart (QImode, operands[2]);
-  operands[3] = gen_lowpart (QImode, operands[3]);
+  operands[3] = gen_int_mode (INTVAL (operands[3]), QImode);
 })
 
 ;; %%% This used to optimize known byte-wide and operations to memory,
@@ -8574,7 +8574,7 @@
 {
   operands[0] = gen_lowpart (QImode, operands[0]);
   operands[1] = gen_lowpart (QImode, operands[1]);
-  operands[2] = gen_lowpart (QImode, operands[2]);
+  operands[2] = gen_int_mode (INTVAL (operands[2]), QImode);
 })
 
 (define_insn "*andndi3_doubleword"
@@ -8933,7 +8933,7 @@
 {
   operands[0] = gen_lowpart (QImode, operands[0]);
   operands[1] = gen_lowpart (QImode, operands[1]);
-  operands[2] = gen_lowpart (QImode, operands[2]);
+  operands[2] = gen_int_mode (INTVAL (operands[2]), QImode);
 })
 
 (define_expand "xorqi_ext_1_cc"
