--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,9 @@
 2017-01-04  Jakub Jelinek  <jakub@redhat.com>
 
+	* parser.c (cp_parser_simple_declaration): Diagnose function
+	declaration among more than one init-declarators with auto
+	specifier.
+
 	PR c++/71182
 	* parser.c (cp_lexer_previous_token): Use vec_safe_address in the
 	assertion, as lexer->buffer may be NULL.
