--- a/gcc/c-family/ChangeLog
+++ b/gcc/c-family/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-04  Marek Polacek  <polacek@redhat.com>
+
+	PR c++/64767
+	* c.opt (Wpointer-compare): New option.
+
 2017-01-04  Jakub Jelinek  <jakub@redhat.com>
 
 	PR driver/78957
