--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-04  Marek Polacek  <polacek@redhat.com>
+
+	PR c++/64767
+	* c-c++-common/Wpointer-compare-1.c: New test.
+
 2017-01-04  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/78949
